fix alignment issue

--- a/styles.css
+++ b/styles.css
@@ -352,11 +352,33 @@ input {
   padding: 3px 0;
 }
 
+.size__header2{
+
+  display: grid;
+  background-color: rgb(65, 65, 65);
+  color: white;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  border-bottom: 1px solid black;
+  padding: 3px 0;
+}
+
 .size__header_section_label{
   font-size: 12px;
   font-weight: bold;
   text-align: left;
   padding-left: 5px;
+}
+.size__header_section_label2{
+  width: 95px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: left;
+  padding-left: 5px;
+}
+
+.size__header_section2{
+  text-align: center;
 }
 
 .offset-input{
